project/k8s/grafana-ingress-otus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: "nginx"
  rules:
  - host: grafana.nt33.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-grafana  # Замените на имя сервиса Grafana
            port:
              number: 80
