project/k8s/ingress-otus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ingress
  namespace: otus
spec:
  ingressClassName: "nginx"
  rules:
  - host: otus.nt33.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend  # Замените на имя сервиса Grafana
            port:
              number: 80
