project/k8s/prometheus-ingress-otus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: "nginx"
  rules:
  - host: prometheus.nt33.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated  # Замените на имя сервиса Grafana
            port:
              number: 9090
